app/styles/components/_display.sass
.display
  color: $display-color
  display: flex
  flex-direction: column
  font-size: $display-size
  font-weight: 100
  height: $display-height
  position: relative

  &__expression
    background-color: $expression-background
    font-size: $expression-size
    height: $expression-height
    line-height: $expression-height
    overflow-x: hidden
    padding: 0 1rem
    text-align: right
    white-space: nowrap

  &__result
    background-color: $result-background
    bottom: 0
    height: $result-height
    line-height: $result-height
    position: absolute
    text-align: right
    width: 100%

  &__scaled-result
    display: inline-block
    padding: 0 1rem
    transform-origin: left
    transition: .2s transform cubic-bezier(0.5, 0, 0.5, 2)

